# feecc-print-server

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/: Deploy-master-DO.yml
docs/: README.md
src/: app.py  logging_config.py
src/auth/: database.py  dependencies.py
src/feecc_printer/: Printer.py  models.py
tests/: test_printing.py
